--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -8,7 +8,7 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
     />
-    <link rel="stylesheet" href="port.css" />
+    <link rel="stylesheet" href="main.css" />
     <style>
       /* Color palette */
       :root {
