--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -8,7 +8,7 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
     />
-    <link rel="stylesheet" href="protfolio/main.css" />
+    <link rel="stylesheet" href="portfolio/main.css" />
     <style>
       /* Color palette */
       :root {
@@ -1122,6 +1122,6 @@
       </div>
     </footer>
 
-    <script src="portfolio/main.js"></script>
+     <script src="portfolio/main.js" defer></script>
   </body>
 </html>
