--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -8,7 +8,7 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
     />
-    <link rel="stylesheet" href="portfolio/main.css" />
+    <link rel="stylesheet" href="main.css" />
     <style>
       /* Color palette */
       :root {
@@ -747,7 +747,7 @@
         </div>
         <div class="about-content">
           <div class="about-img">
-            <img src="portfolio/Portfolio_img.png" alt="Manmath's profile picture" />
+            <img src="Portfolio_img.png" alt="Manmath's profile picture" />
           </div>
           <div class="about-text">
             <h3>I'm Manmath, a Computer Engineering Student</h3>
@@ -959,7 +959,7 @@
         <div class="project-container">
           <div class="project-card">
             <div class="project-img">
-              <img src="portfolio/wicon.jpg" alt="Weather_Icon" />
+              <img src="wicon.jpg" alt="Weather_Icon" />
             </div>
             <div class="project-content">
               <h3 class="project-title">Weather24</h3>
@@ -985,7 +985,7 @@
 
           <div class="project-card">
             <div class="project-img">
-              <img src="portfolio/Userpfp.png" alt="Portfolio_Icon" />
+              <img src="Userpfp.png" alt="Portfolio_Icon" />
             </div>
             <div class="project-content">
               <h3 class="project-title">Personal Portfolio Website</h3>
@@ -1122,6 +1122,6 @@
       </div>
     </footer>
 
-     <script src="portfolio/main.js" defer></script>
+     <script src="main.js" defer></script>
   </body>
 </html>
