--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script src="main.js"></script>
+    <script>
+  console.log("JS is running");
+</script>
+
     <title>Manmath's Portfolio</title>
     <link
       rel="stylesheet"
